--- a/client/popup.html
+++ b/client/popup.html
@@ -15,7 +15,7 @@
         </select>
 
         <label for="passwordLength">Password Length:</label>
-        <input type="number" id="passwordLength" name="length" min="1" value="8">
+        <input type="number" id="passwordLength" name="pwLength" min="1" value="8">
 
         <label for="includeNumbers">Include Numbers:</label>
         <input type="checkbox" id="includeNumbers" name="numbers" checked>
