--- a/client/popup.html
+++ b/client/popup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="width: 400px;height: 300px;">
+<html lang="en" style="width: 400px;height: 500px;">
 
 <head>
     <meta charset="UTF-8">
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="container mt-5">
+    <div class="container my-3">
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <h1 class="text-center mb-4">Password Generator</h1>
