--- a/client/popup.html
+++ b/client/popup.html
@@ -26,15 +26,13 @@
                         <input type="number" class="form-control" id="passwordLength" name="pwLength" min="1" value="8">
                     </div>
                     <div class="form-group">
-                        <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input" id="includeNumbers" name="numbers" checked>
-                            <label class="custom-control-label" for="includeNumbers">Include Numbers</label>
-                        </div>
+                        <label for="symbols">Symbols to include:</label>
+                        <input type="text" class="form-control" id="symbols" name="symbols" value="!-*._@">
                     </div>
                     <div class="form-group">
                         <div class="custom-control custom-switch">
-                            <input type="checkbox" class="custom-control-input" id="includeSymbols" name="symbols" checked>
-                            <label class="custom-control-label" for="includeSymbols">Include Symbols</label>
+                            <input type="checkbox" class="custom-control-input" id="includeNumbers" name="numbers" checked>
+                            <label class="custom-control-label" for="includeNumbers">Include Numbers</label>
                         </div>
                     </div>
                     
